@@ -20,17 +20,6 @@ name|javax
 operator|.
 name|xml
 operator|.
-name|bind
-operator|.
-name|DatatypeConverter
-import|;
-end_import
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
 name|parsers
 operator|.
 name|DocumentBuilderFactory
@@ -293,6 +282,15 @@ operator|.
 name|util
 operator|.
 name|ArrayList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Base64
 import|;
 end_import
 begin_import
@@ -4834,9 +4832,12 @@ block|{
 name|String
 name|encoding
 init|=
-name|DatatypeConverter
+name|Base64
 operator|.
-name|printBase64Binary
+name|getEncoder
+argument_list|()
+operator|.
+name|encodeToString
 argument_list|(
 name|url
 operator|.
@@ -5028,9 +5029,12 @@ block|{
 name|String
 name|encoding
 init|=
-name|DatatypeConverter
+name|Base64
 operator|.
-name|printBase64Binary
+name|getEncoder
+argument_list|()
+operator|.
+name|encodeToString
 argument_list|(
 name|url
 operator|.
